perf: replace threaded downloader with async
refactor(dpkg): on completion change spinner to green check mark
refactor: change download error messages
refactor(nala): improve post downloader messages
refactor: make `self.failed` list to better handle error messages
fix: download progress not refreshing when idle
refactor: catch more general error
fix: error handling for getting mirror list
fix: error handling for ConnectError
refactor(mypy): fix type errors due to new mypy config
ci: add `--python-executable` flag to `mypy` `pre-commit`
style(pre-commit): add extra line after imports
docs(nala): make license pager more simple
build: add `debian/docs` for new license inclusion
docs: add 3rd party license files
build: update depends and `debian/rules`
refactor: convert proxy support to new httpx backend
fix: filler sometimes inserted wrong during update
fix: some mirrors disconnect before sending a response
fix: history not logging files that were auto-removed
fix(fetch): default timeout not giving enough time for Ubuntu Mirrors
fix: dpkg panel title saying updating during a history operation
ci(rich): stop pylint from complaining about subclasses
refactor: change progress bar to update bytes instead of per package
refactor(pylint): fix indentation.
refactor(pylint): disable too many arguments
refactor(pylint): remove unused import, change no-self method to function
refactor(pylint): lines too long
fix(dpkg): progress bar showing `100%` when all operations haven't completed
refactor: remove spam messages that were implemented before `scroll_bar`
fix(dpkg): scroll bar title `Updating Packages` when it is fetching archives
refactor: add estimated time to download and dpkg progress bars
refactor: change 3rd party license constant to make more sense
docs: update `--license` to include HTTPX
build: update depends in `setup.py`
build: remove unused `lintian-overrides`
build: update dependencies for new async changes
fix(downloader): slow to start downloads using `mirrors://

--- a/debian/control
+++ b/debian/control
@@ -11,9 +11,13 @@ Build-Depends:	debhelper-compat (= 13),
 				nuitka,
 				python3-apt,
 				python3-pexpect,
-				python3-requests,
 				python3-jsbeautifier,
 				python3-yaml,
+				python3-aiofiles,
+				python3-rfc3986,
+				python3-anyio,
+				python3-sniffio,
+				python3-idna,
 				python3-pip,
 				python3.9-dev,
 				pandoc,
@@ -28,7 +32,11 @@ Depends:	${shlibs:Depends},
 			libpython3.9,
 			python3-apt,
 			python3-pexpect,
-			python3-requests,
+			python3-aiofiles,
+			python3-rfc3986,
+			python3-sniffio,
+			python3-certifi,
+			python3-idna,
 			python3-jsbeautifier,
 Description: commandline frontend for the apt package manager
  nala is a frontend for the apt package manager. It has a lot
