build: update depends to target debian stable version

--- a/debian/control
+++ b/debian/control
@@ -8,15 +8,14 @@ Maintainer: Volian Developers <volian-devel@volian.org>
 Uploaders: Blake Lee <blake@volian.org>
 Standards-Version: 4.6.0
 Build-Depends:	debhelper-compat (= 13),
+				apt,
 				nuitka,
 				python3-apt,
 				python3-pexpect,
 				python3-jsbeautifier,
-				python3-yaml,
-				python3-rfc3986,
-				python3-sniffio,
-				python3-idna,
-				python3-pip,
+				python3-rich,
+				python3-httpx,
+				python3-anyio,
 				python3.9-dev,
 				pandoc,
 				chrpath,
@@ -27,9 +26,11 @@ Package: nala
 Architecture: any
 Depends:	${shlibs:Depends},
 			${misc:Depends},
+			apt,
 			libpython3.9,
 			python3-apt,
 			python3-pexpect,
+			python3-typing-extensions,
 			python3-rfc3986,
 			python3-sniffio,
 			python3-certifi,
