build: update debian files

--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends:	debhelper-compat (= 13),
 				python3-httpx,
 				python3-anyio,
 				python3.9-dev,
+				python3-babel,
 				pandoc,
 				chrpath,
 				bash-completion,
