build: update debian files

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,8 @@ Build-Depends:	debhelper-compat (= 13),
 				python3-anyio,
 				python3.9-dev,
 				python3-babel,
+				python3-yaml,
+				python3-charset-normalizer,
 				pandoc,
 				chrpath,
 				bash-completion,
