--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,10 @@ show_error_codes = true
 show_error_context = true
 strict = true
 
+[tool.pydocstyle]
+add_select = "D211, D212"
+ignore = "D206, D203, D213"
+
 [tool.poetry.scripts]
 nala = "nala.__main__:main"
 
