--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ rich = "^11.2.0"
 pexpect = "^4.8.0"
 anyio = "^3.5.0"
 jsbeautifier = "^1.14.0"
+typer = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 black = { git = "https://github.com/volitank/black.git", branch = "black-tabs" }
