--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,7 @@ execute_before_dh_installman:
 	pandoc docs/nala.8.md \
 	--standalone \
 	--from markdown \
-	--to man | gzip -c > docs/nala.8.gz
+	--to man > docs/nala.8
 
 override_dh_auto_install:
 	python3 setup.py install --root=$(CURDIR)/debian/nala/ --install-layout=deb
