debian: use DH_VERBOSE instead of set -x
Signed-off-by: Stephan Lachnit <stephanlachnit@debian.org>

--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,8 @@
 #!/usr/bin/make -f
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 export PYBUILD_NAME = nala
+export DH_VERBOSE = 1
 %:
-	set -x
 	dh $@ --buildsystem=pybuild
 
 execute_before_dh_installman:
