build: update dependencies

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,6 @@
 [encoding: UTF-8]
 nala/__main__.py
 nala/cache.py
-nala/config.py
 nala/constants.py
 nala/debfile.py
 nala/downloader.py
@@ -14,5 +13,6 @@ nala/nala.py
 nala/options.py
 nala/rich.py
 nala/search.py
+nala/summary.py
 nala/show.py
 nala/utils.py
