--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,8 @@ Build-Depends:
   python3-jsbeautifier,
   python3-httpx,
   python3-rich,
+  python3-socksio,
+  python3-typer,
   pandoc,
   bash-completion,
   dh-sequence-bash-completion,
@@ -40,6 +42,8 @@ Depends:
   python3-jsbeautifier,
   python3-httpx,
   python3-rich,
+  python3-typer,
+Recommends: python3-socksio
 Description: Commandline frontend for the APT package manager
  Nala is a frontend for the APT package manager. It has a lot
  of the same functionality, but formats the output to be more
