--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+        exclude: "^po/"
       - id: mixed-line-ending
         args: ["--fix=lf"]
       - id: check-merge-conflict
