build: add a build script for managing translation files and building nuitka
build: update `nala_build.py` environments

--- a/debian/rules
+++ b/debian/rules
@@ -10,3 +10,6 @@ execute_before_dh_installman:
 	--standalone \
 	--from markdown \
 	--to man > docs/nala.8
+
+execute_before_dh_auto_install:
+	python3 nala_build.py babel --compile
