--- a/debian/control
+++ b/debian/control
@@ -7,14 +7,11 @@ Build-Depends:
   debhelper-compat (= 13),
   dh-sequence-python3,
   python3-all,
-  python3-setuptools,
   pybuild-plugin-pyproject,
-  python3-distutils-extra,
+  python3-babel,
   python3-poetry,
   python3-apt,
-  python3-anyio,
   python3-pexpect,
-  python3-ptyprocess,
   python3-httpx,
   python3-rich,
   python3-socksio,
@@ -35,12 +32,6 @@ Depends:
   ${misc:Depends},
   apt,
   python3-apt,
-  python3-anyio,
-  python3-pexpect,
-  python3-ptyprocess,
-  python3-httpx,
-  python3-rich,
-  python3-typer,
 Recommends: python3-socksio
 Description: Commandline frontend for the APT package manager
  Nala is a frontend for the APT package manager. It has a lot
