feat: add config to disable auto updating the package list

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -3,3 +3,6 @@
 Nala::ScrollingText "true";
 # Set to false to disable auto auto-removing
 Nala::AutoRemove "true";
+# Set to false to disable auto updating the package list
+# when running the upgrade command
+Nala::AutoUpdate "true";
