feat: change config file to toml
refactor: change config names

refactor(config): comment install hooks

fix: exception when config file doesn't exist

--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Build-Depends:
   python3-rich,
   python3-socksio,
   python3-typer,
+  python3-tomli,
   pandoc,
   bash-completion,
   dh-sequence-bash-completion,
