--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -1,8 +1,25 @@
 ## Configuration file for Nala
+[Nala]
 # Set to false to disable scrolling text
-Nala::ScrollingText "true";
+scrolling_text = true
 # Set to false to disable auto auto-removing
-Nala::AutoRemove "true";
+auto_remove = true
 # Set to false to disable auto updating the package list
 # when running the upgrade command
-Nala::AutoUpdate "true";
+auto_update = true
+
+## Pre and Post install hooks allow you to run scripts or commands
+## Before or After an install, upgrade and remove
+[PreInstall]
+## The `hook` key will run after every transaction
+# hook = "/general/hook/pre-install.sh"
+## You can use a package name to run a specific hook
+## Only if that package has been altered
+# nala = "apt show nala"
+## Additionally you can use a wildcard*
+# "linux-image-5*-amd64" = "/hook/for/pre-kernel.sh"
+
+[PostInstall]
+# hook = "/general/hook/post-install.sh"
+# nala = "apt show nala"
+# "linux-image-5*-amd64" = "/hook/for/post-kernel.sh"
