--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ rich = "^12.1.0"
 pexpect = "^4.8.0"
 anyio = "^3.5.0"
 typer = "^0.4.0"
+tomli = "^1.2.2"
 socksio = {version = "^1.0.0", optional = true}
 
 [tool.poetry.dev-dependencies]
