--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ pexpect = "^4.8.0"
 anyio = "^3.5.0"
 typer = "^0.4.0"
 tomli = "^1.2.2"
+typing-extensions = "^3.10.0.2"
 socksio = {version = "^1.0.0", optional = true}
 
 [tool.poetry.dev-dependencies]
