feat: add config option to pass arguments to install hooks
refactor: use `apt`'s Invoke for pre and post install hooks

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -23,3 +23,22 @@ auto_update = true
 # hook = "/general/hook/post-install.sh"
 # nala = "apt show nala"
 # "linux-image-5*-amd64" = "/hook/for/post-kernel.sh"
+
+## You can also setup Nala to pass arguments to your hook.
+## It can be done inline style like so
+# neofetch = { hook = "/home/username/neo-hook.sh", args = ["name", "version"] }
+
+## You can also use the longer form
+# [PostInstall.neofetch]
+# hook = "/home/volitank/neo-hook.sh"
+## Arguments are given to the hook in the order they exist in the array below
+# args = [
+# 	"name", # The name of the package. Arch is appended for non-native arches
+# 	"fullname", # Full name of the package "neofetch:amd64"
+# 	"architecture", # This will be the arch of the candidate version or "None"
+#	"version", # This will be the version string of the candidate version or "None"
+## To pick information from a specific version you can use the following syntax
+# 	"candidate.version", # Version string of the candidate version or "None"
+# 	"installed.version", # Version string of the installed version or "None"
+# 	"installed.architecture", # Arch of the installed version or "None"
+# ]
