--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends:
   python3-socksio,
   python3-typer,
   python3-tomli,
-  pandoc,
+  python3-docutils,
   bash-completion,
   dh-sequence-bash-completion,
 Rules-Requires-Root: no
