--- a/debian/rules
+++ b/debian/rules
@@ -6,10 +6,7 @@ export DH_VERBOSE = 1
 	dh $@ --buildsystem=pybuild
 
 execute_before_dh_installman:
-	pandoc docs/nala.8.md \
-	--standalone \
-	--from markdown \
-	--to man > docs/nala.8
+	python3 nala_build.py man
 
 execute_before_dh_auto_install:
 	python3 nala_build.py babel --compile
