feat: add assume_yes configuration option

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -7,6 +7,9 @@ auto_remove = true
 # Set to false to disable auto updating the package list
 # when running the upgrade command
 auto_update = true
+# Set to true and Nala will always assume yes
+assume_yes = false
+
 
 ## Pre and Post install hooks allow you to run scripts or commands
 ## Before or After an install, upgrade and remove
