feat: allow option to auto list upgradable pkgs

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -2,11 +2,17 @@
 [Nala]
 # Set to false to disable scrolling text
 scrolling_text = true
+
 # Set to false to disable auto auto-removing
 auto_remove = true
+
 # Set to false to disable auto updating the package list
 # when running the upgrade command
 auto_update = true
+
+# Set to true Nala will list the upgradable packages automatically after `update`
+update_show_packages = false
+
 # Set to true and Nala will always assume yes
 assume_yes = false
 
