feat: allow decimal/binary/megabit configurations

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -16,6 +16,11 @@ update_show_packages = false
 # Set to true and Nala will always assume yes
 assume_yes = false
 
+# Set to true for `MiB` false for `MB`
+filesize_binary = false
+
+# Set to true for `MegaBit` false for `MegaByte`
+transfer_speed_bit = false
 
 ## Pre and Post install hooks allow you to run scripts or commands
 ## Before or After an install, upgrade and remove
