--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ charset = utf-8
 indent_style = tab
 indent_size = 4
 
-[{changelog, *.yaml}]
+[{changelog, *.yaml, *yml}]
 indent_style = space
 indent_size = 2
