--- a/.pylintrc
+++ b/.pylintrc
@@ -87,7 +87,8 @@ disable=raw-checker-failed,
 		deprecated-pragma,
 		use-symbolic-message-instead,
 		logging-fstring-interpolation,
-		protected-access
+		protected-access,
+		duplicate-code
 
 
 # Enable the message, report, category or checker with the given id(s). You can
