--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,25 +44,25 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-httpx = "~0.22.0"
-rich = "^12.1.0"
+python = "^3.8"
+httpx = "~0.23.0"
+rich = "^12.4.4"
 pexpect = "^4.8.0"
-anyio = "^3.5.0"
-typer = "^0.4.0"
-tomli = "^1.2.2"
-typing-extensions = "^3.10.0.2"
+anyio = "^3.6.1"
+typer = "^0.4.1"
+tomli = "^2.0.1"
+typing-extensions = "^4.3.0"
 socksio = {version = "^1.0.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 black = { git = "https://github.com/volitank/black.git", branch = "black-tabs" }
-codespell = "^2.1.0"
-isort = "^5.10.1"
-mypy = "^0.941"
-pre-commit = "^2.15.0"
-pyupgrade = "^2.31.1"
-pydocstyle = "^6.1.1"
-pylint = "^2.12.2"
+codespell = "*"
+isort = "*"
+mypy = "*"
+pre-commit = "^*"
+pyupgrade = "*"
+pydocstyle = "*"
+pylint = "*"
 
 [tool.poetry.extras]
 socks = ["socksio"]
