feat: add a simple more condensed summary option

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -3,6 +3,9 @@
 # Set to false to disable scrolling text
 scrolling_text = true
 
+# Set to true for a more condensed transaction summary
+simple_summary = false
+
 # Set to false to disable auto auto-removing
 auto_remove = true
 
