Fix typo in `nala.conf` transfer_speed_bits setting

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -20,7 +20,7 @@ assume_yes = false
 filesize_binary = false
 
 # Set to true for `MegaBit` false for `MegaByte`
-transfer_speed_bit = false
+transfer_speed_bits = false
 
 ## Pre and Post install hooks allow you to run scripts or commands
 ## Before or After an install, upgrade and remove
