feat: add config option to change upgrade default mode

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -13,6 +13,9 @@ auto_remove = true
 # when running the upgrade command
 auto_update = true
 
+# Set to true to make full-upgrade the default
+full_upgrade = false
+
 # Set to true Nala will list the upgradable packages automatically after `update`
 update_show_packages = false
 
