--- a/.pylintrc
+++ b/.pylintrc
@@ -568,5 +568,4 @@ preferred-modules=
 
 # Exceptions that will emit a warning when being caught. Defaults to
 # "BaseException, Exception".
-overgeneral-exceptions=	BaseException,
-						Exception
+overgeneral-exceptions=	builtins.Exception
