--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends:
   python3-babel,
   python3-poetry-core,
   python3-apt,
+  python3-debian,
   python3-pexpect,
   python3-httpx,
   python3-rich,
