fix: run apt hooks before handing off to apt
This fix will solve a lot of issues where it's possible for Nala to hang. Essentially we run apt's hooks before we call `DoInstall`, and then we don't allow `apt` to run the hooks.

This commit also changes default to no scrolling windows. It is possible for a program to require user input but the information it has given scrolls out of view.

--- a/debian/nala.conf
+++ b/debian/nala.conf
@@ -1,7 +1,8 @@
 ## Configuration file for Nala
 [Nala]
-# Set to false to disable scrolling text
-scrolling_text = true
+# Set to true to enable scrolling text
+# Scrolling text is deprecated and will be removed in the future.
+scrolling_text = false
 
 # Set to true for a more condensed transaction summary
 simple_summary = false
@@ -27,42 +28,3 @@ filesize_binary = false
 
 # Set to true for `MegaBit` false for `MegaByte`
 transfer_speed_bits = false
-
-## Pre and Post install hooks allow you to run scripts or commands
-## Before or After an install, upgrade and remove
-[PreInstall]
-## The `hook` key will run after every transaction
-# hook = "/general/hook/pre-install.sh"
-
-## You can use a package name to run a specific hook
-## Only if that package has been altered
-# nala = "apt show nala"
-
-## Additionally you can use a wildcard*
-# "linux-image-5*-amd64" = "/hook/for/pre-kernel.sh"
-
-[PostInstall]
-# hook = "/general/hook/post-install.sh"
-# nala = "apt show nala"
-# "linux-image-5*-amd64" = "/hook/for/post-kernel.sh"
-
-## You can also setup Nala to pass arguments to your hook.
-## It can be done inline style like so
-# neofetch = { hook = "/home/username/neo-hook.sh", args = ["name", "version"] }
-
-## You can also use the longer form
-# [PostInstall.neofetch]
-# hook = "/home/volitank/neo-hook.sh"
-
-## Arguments are given to the hook in the order they exist in the array below
-# args = [
-# 	"name", # The name of the package. Arch is appended for non-native arches
-# 	"fullname", # Full name of the package "neofetch:amd64"
-# 	"architecture", # This will be the arch of the candidate version or "None"
-#	"version", # This will be the version string of the candidate version or "None"
-
-## To pick information from a specific version you can use the following syntax
-# 	"candidate.version", # Version string of the candidate version or "None"
-# 	"installed.version", # Version string of the installed version or "None"
-# 	"installed.architecture", # Arch of the installed version or "None"
-# ]
